--- a/package.json
+++ b/package.json
@@ -18,18 +18,15 @@
   "author": "Priyanshu Singh",
   "license": "ISC",
   "dependencies": {
-    "cloudinary": "^2.7.0",
-    "cookie-session": "^2.1.1",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "express-session": "^1.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.8.7",
-    "multer": "^1.4.5-lts.1",
+    "mongoose": "^8.4.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "streamifier": "^0.1.1"
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
