--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
   "author": "Priyanshu Singh",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.2.0",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0"
